--- a/spalpuGitHub/spalpuGitHub.csproj
+++ b/spalpuGitHub/spalpuGitHub.csproj
@@ -151,20 +151,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\metisMenu.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\_references.js" />
+    <Content Include="Scripts\up.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -177,11 +172,40 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\_header.cshtml" />
     <Content Include="Views\Shared\_footer.cshtml" />
     <Content Include="Views\Home\_TreePartial.cshtml" />
     <Content Include="Views\Home\View.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_abdominal_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_acute_period1.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_acute_period2.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_acute_period3.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_all.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_attachment.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_bars.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_breathing_exercises.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_breathing_exercises_relax.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_charging_for_tail.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_classic_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_conclusion.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_foot_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_gold_rules.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_massage_and_pain.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_Massage_is_available_to_everyone.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_metodika.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_neck_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_pelvic_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_singly.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_special.cshtml" />
+    <Content Include="Views\Home\LifeGo\SPHA\_Thai_massage.cshtml" />
+    <Content Include="Views\Home\LifeGo\_lifego.cshtml" />
+    <Content Include="Views\Home\LifeGo\_main.cshtml" />
+    <Content Include="Views\Home\LifeGo\_mysshtsy.cshtml" />
+    <Content Include="Views\Home\LifeGo\_osteochondrosis.cshtml" />
+    <Content Include="Views\Home\LifeGo\_relaxation.cshtml" />
+    <Content Include="Views\Home\LifeGo\_smailphilosophy.cshtml" />
+    <Content Include="Views\Home\LifeGo\_whomysshtsy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
