--- a/spalpuGitHub/Web.config
+++ b/spalpuGitHub/Web.config
@@ -18,6 +18,7 @@
   </appSettings>
   <system.web>
     <trace enabled="true" />
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
