--- a/spalpuGitHub/Web.config
+++ b/spalpuGitHub/Web.config
@@ -10,6 +10,10 @@
     <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
   </configSections>
   <dotless minifyCss="false" cache="true" web="false" strictMath="false" />
+  <connectionStrings>
+    <add name="UserConnectionString" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\UserDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,6 +21,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
+    </authentication>
     <trace enabled="true" />
     <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5" />
